# LinAlg-magma

./: LinAlg-magma.cabal  README.md
Numeric/LinAlg/: Magma.hs
Numeric/LinAlg/Magma/: Internal.hs  Mutable.hs
