name:                LinAlg-magma
version:             0.2.0.0
synopsis:            CUDA-based CUBLAS/MAGMA backend for LinAlg
description:         This module provides a high-level immutable interface
                     for using CUBLAS/MAGMA linear algebra computations on the
                     GPU. It also has a high-level mutable BLAS interface that
                     makes it easier to write high-performance computations
                     using mutability and that plays nicely with the
                     immutable interface.
license:             BSD3
author:              Ben Sherman
maintainer:          Ben Sherman <benmsherman@gmail.com>
category:            Numeric
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:     Numeric.LinAlg.Magma.Internal
                       Numeric.LinAlg.Magma.Mutable
                       Numeric.LinAlg.Magma
  other-extensions:    MultiParamTypeClasses, FlexibleInstances, RankNTypes
  build-depends:       base >=4.4 && <4.8,
                       split >=0.2 && <0.3,
                       cuda >=0.5 && <0.7,
                       cublas >=0.2 && <0.3,
                       magma-gpu >=0.1 && <0.2,
                       LinAlg >= 0.2 && <0.3
  default-language:    Haskell2010
